--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.application.name=dataextractor
 
 # Target Database (SQL Server)
-spring.datasource.target.url=jdbc:sqlserver://10.11.4.26:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;database=IOT_STORE_bronze;
+spring.datasource.target.url=jdbc:sqlserver://10.11.4.26:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.target.username=Insights_Write
 spring.datasource.target.password=!n$!g#t$_Mr!T3
 spring.datasource.target.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Target Database (SQL Server)
-spring.datasource.source.url=jdbc:sqlserver://10.23.67.160:1433;database=IOT_STORE;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.source.url=jdbc:sqlserver://10.23.67.160:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.source.username=web
 spring.datasource.source.password=web
 spring.datasource.source.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 # Spring Batch
-spring.batch.jdbc.initialize-schema=always
-spring.batch.jdbc.schema=classpath:org/springframework/batch/core/schema-sqlserver.sql
-spring.batch.job.enabled=true
+spring.batch.jdbc.initialize-schema=never
+spring.batch.jdbc.table-prefix=dbo.BATCH_
 spring.main.allow-bean-definition-overriding=true
+
 
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
