working version till batch inserts of chunk size 5000

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 
 # Spring Batch
 spring.batch.jdbc.initialize-schema=never
+spring.batch.job.enabled=false
 spring.batch.jdbc.table-prefix=dbo.BATCH_
 spring.main.allow-bean-definition-overriding=true
 
