--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,12 @@ spring.datasource.target.username=Insights_Write
 spring.datasource.target.password=!n$!g#t$_Mr!T3
 spring.datasource.target.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# Target Database (SQL Server)
+#spring.datasource.source.url=jdbc:sqlserver://10.11.4.26:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.source.username=Insights_Write
+#spring.datasource.source.password=!n$!g#t$_Mr!T3
+#spring.datasource.source.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# Source Database (SQL Server)
 spring.datasource.source.url=jdbc:sqlserver://10.23.67.160:1433;encrypt=true;trustServerCertificate=true;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.source.username=web
 spring.datasource.source.password=web
